# autoresearch-explorer

./: .gitignore  ARCHITECTURE.md  README.md  autoresearch-viewer-spec.md  index.html  package-lock.json  package.json  prompt-template-draft.md
docs/: AUDIT-REPORT.md
docs/plans/: 2026-03-23-self-healing-agent-design.md  2026-03-23-sidebar-redesign.md  2026-03-23-v2-implementation-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: checkpoint.rs  mod.rs  runtime.rs  signals.rs  sub_agent.rs  tool_builder.rs  watchdog.rs
src-tauri/src/canvas/: mod.rs  operations.rs  state.rs
src-tauri/src/commands/: chat.rs  config.rs  export.rs  memory.rs  mod.rs  session.rs  telegram.rs  template.rs
src-tauri/src/llm/: client.rs  context.rs  mod.rs  types.rs
src-tauri/src/memory/: database.rs  mod.rs  skill_doc.rs
src-tauri/src/storage/: global_index.rs  loop_writer.rs  mod.rs  overview_writer.rs  session_dir.rs  state_writer.rs
src-tauri/src/telegram/: bot.rs
src-tauri/src/template/: mod.rs  parser.rs  schema.rs  types.rs
src-tauri/src/tools/: arxiv.rs  code_executor.rs  custom_tool.rs  docker.rs  file_ops.rs  git.rs  mod.rs  package_manager.rs  registry.rs  shell.rs  web_read.rs  web_search.rs
src-tauri/templates/: general-research.md  literature-review.md  ml-optimization.md  skill-builder.md  tool-builder.md
src/canvas/: CanvasRenderer.ts  CanvasView.tsx  semanticZoom.ts
src/hooks/: useKeyboard.ts  useTauriEvents.ts
src/types/: canvas.ts  (+2 more)
(+52 files in other folders)
