[package]
name = "autoresearch"
version = "0.1.0"
edition = "2021"

[lib]
name = "autoresearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs-next = "2"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
scraper = "0.26.0"
